Edit: edit swagger and db
